增加通讯报文字段日志